--- a/chunk_includes/example_intro.html
+++ b/chunk_includes/example_intro.html
@@ -1,18 +1,34 @@
 <div style="width: 40em;">
 <p>
-This experiment has two parts. In the first part, you will be required to read
-a number of English sentences one word at a time. You can advance to the next
-word by pressing the space bar.
+In this experiment, you will be required to read
+a number of English sentences one word at a time, and answer some comprehension questions.
 </p>
 <p>
-In the second part, you will be asked to &ldquo;rate&rdquo; some sentences
-on a scale of 1-7 (with 1 bad and 7 good).
+Important: You have to be an English native speaker to participate in this study! Please return the HIT if you are not an English native speaker.
 </p>
 <p>
-[Privacy statement, etc., etc.]
+We invite you to participate in a research study on language production and comprehension. Your experimenter will ask you to do a linguistic task such as reading sentences or words, naming pictures or describing scenes, making up sentences of your own, or participating in a simple language game. 
 </p>
-
-<table>
+<p>
+There are no risks or benefits of any kind involved in this study. 
+</p>
+<p>
+You will be paid for your participation at the posted rate. 
+</p>
+<p>
+If you have read this form and have decided to participate in this experiment, please understand your participation is voluntary and you have the right to withdraw your consent or discontinue participation at any time without penalty or loss of benefits to which you are otherwise entitled. You have the right to refuse to do particular tasks. Your individual privacy will be maintained in all published and written data resulting from the study.   You may print this form for your records.
+</p>
+<p>
+CONTACT INFORMATION: 
+If you have any questions, concerns or complaints about this research study, its procedures, risks and benefits, you should contact the Protocol Director Meghan Sumner at (650)-725-9336. 
+</p>
+<p>
+If you are not satisfied with how this study is being conducted, or if you have any concerns, complaints, or general questions about the research or your rights as a participant, please contact the Stanford Institutional Review Board (IRB) to speak to someone independent of the research team at (650)-723-2480 or toll free at 1-866-680-2906. You can also write to the Stanford IRB, Stanford University, 3000 El Camino Real, Five Palo Alto Square, 4th Floor, Palo Alto, CA 94306 USA. 
+</p>
+<p>
+If you agree to participate, please proceed to the study tasks.
+</p>
+<!--<table>
 <tr>
 <td colspan="2" style="width: 30em; padding-bottom: 1em;">
 <i>(The form below is just a rough example showing all of the input controls that work properly
@@ -58,6 +74,6 @@ data on subjects.)</i>
     <textarea name="write_something" rows="5" cols="40"></textarea>
   </td>
 </tr>
-</table>
+</table>-->
 
 </div>
